# ScamCheckerAgent

./: README.md  test_agent.py  test_extraction_fix.py  verify_scam.py
honeypot_api/: .env  .gitignore  README.md  debug_extraction.py  demo.py  pyproject.toml  requirements.txt  test_extraction_fix.py
honeypot_api/app/: agent.py  auth.py  callback.py  config.py  extraction.py  main.py  middleware.py  models.py  response_builder.py  scam_detection.py  store.py  utils.py
honeypot_api/tests/: test_auth.py  test_boundary_hardening.py  test_callback_logic.py  test_error_handling.py  test_extraction_wiring.py  test_guvi_format.py  test_method_handlers.py  test_refinement.py  test_schema.py
